test_dir/logs_backup/gcc/00.5/open_gcc_2016-12-01-17:07:14.txt
--------------------------------------------------------------------------------------------
seed: 23474
cc1: fatal error: blaster.c: Permission denied
compilation terminated.
seed: 23474
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 23474
cc1: fatal error: shared.c: Permission denied
compilation terminated.
seed: 23474
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 4404
cc1: fatal error: blaster.c: Permission denied
compilation terminated.
seed: 4404
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 4404
cc1: fatal error: shared.c: Permission denied
compilation terminated.
seed: 4404
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 11239
cc1: fatal error: blaster.c: Permission denied
compilation terminated.
seed: 11239
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 11239
cc1: fatal error: shared.c: Permission denied
compilation terminated.
seed: 11239
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 467
cc1: fatal error: /usr/include/x86_64-linux-gnu/stdc-predef.h: Permission denied
compilation terminated.
seed: 467
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 467
cc1: fatal error: /usr/include/x86_64-linux-gnu/stdc-predef.h: Permission denied
compilation terminated.
seed: 467
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 18318
cc1: fatal error: blaster.c: Permission denied
compilation terminated.
seed: 18318
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 18318
cc1: fatal error: shared.c: Permission denied
compilation terminated.
seed: 18318
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 27279
cc1: fatal error: /usr/include/x86_64-linux-gnu/stdc-predef.h: Permission denied
compilation terminated.
seed: 27279
seed: 27279
seed: 27279
seed: 27279
cc1: fatal error: /usr/include/x86_64-linux-gnu/stdc-predef.h: Permission denied
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 951
cc1: fatal error: blaster.c: Permission denied
compilation terminated.
seed: 951
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 951
cc1: fatal error: shared.c: Permission denied
compilation terminated.
seed: 951
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 28631
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include-fixed/stdc-predef.h: Permission denied
compilation terminated.
seed: 28631
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 28631
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include-fixed/stdc-predef.h: Permission denied
compilation terminated.
seed: 28631
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 16816
cc1: fatal error: /usr/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 16816
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 16816
cc1: fatal error: /usr/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 16816
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 15316
cc1: fatal error: blaster.c: Permission denied
compilation terminated.
seed: 15316
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 15316
cc1: fatal error: shared.c: Permission denied
compilation terminated.
seed: 15316
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 29931
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 29931
seed: 29931
seed: 29931
seed: 29931
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/stdc-predef.h: Permission denied
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 3641
cc1: fatal error: /usr/include/x86_64-linux-gnu/stdc-predef.h: Permission denied
compilation terminated.
seed: 3641
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 3641
cc1: fatal error: /usr/include/x86_64-linux-gnu/stdc-predef.h: Permission denied
compilation terminated.
seed: 3641
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 25325
cc1: fatal error: blaster.c: Permission denied
compilation terminated.
seed: 25325
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 25325
cc1: fatal error: shared.c: Permission denied
compilation terminated.
seed: 25325
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 20149
cc1: fatal error: blaster.c: Permission denied
compilation terminated.
seed: 20149
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 20149
cc1: fatal error: shared.c: Permission denied
compilation terminated.
seed: 20149
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 22719
cc1: fatal error: /usr/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 22719
seed: 22719
seed: 22719
seed: 22719
cc1: fatal error: /usr/include/stdc-predef.h: Permission denied
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 31634
cc1: fatal error: blaster.c: Permission denied
compilation terminated.
seed: 31634
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 31634
cc1: fatal error: shared.c: Permission denied
compilation terminated.
seed: 31634
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 14077
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 14077
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 14077
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 14077
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 8777
blaster.c:16:20: fatal error: shared.h: Permission denied
 #include "shared.h"
                    ^
compilation terminated.
seed: 8777
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 8777
shared.c:11:20: fatal error: shared.h: Permission denied
 #include "shared.h"
                    ^
compilation terminated.
seed: 8777
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 27581
cc1: fatal error: blaster.c: Permission denied
compilation terminated.
seed: 27581
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 27581
cc1: fatal error: shared.c: Permission denied
compilation terminated.
seed: 27581
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 22689
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include-fixed/stdc-predef.h: Permission denied
compilation terminated.
seed: 22689
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 22689
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include-fixed/stdc-predef.h: Permission denied
compilation terminated.
seed: 22689
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
